[package]
name = "aprsproxy"
version = "0.1.1"
authors = ["Michael BD7MQB <bd7mqb@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["thread-pool"]}
trust-dns-resolver = "0.20"
structopt = "0.3"
lazy_static = "1.4"
chrono = "0.4"