[package]
name = "aprsproxy"
version = "0.3.0"
authors = ["Michael BD7MQB <bd7mqb@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "macros"] }
reqwest = { version = "0.11", default-features = false }
futures = "0.3"
trust-dns-resolver = "0.20"
structopt = "0.3"
lazy_static = "1.4"
chrono = "0.4"
log = "0.4"
env_logger = "0.8"

[dev-dependencies]
tokio-test = "0.4"