[package]
name = "aprsproxy"
version = "0.3.6"
authors = ["Michael BD7MQB <bd7mqb@qq.com>"]
description = "A simply APRS-IS proxy tool"
license = "AGPL-3.0"
repository = "https://github.com/lazywalker/aprsproxy"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "macros"] }
reqwest = { version = "0.11", default-features = false }
futures = "0.3"
trust-dns-resolver = "0.23"
structopt = "0.3"
lazy_static = "1.4"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

[profile.bench]
debug = 1

[profile.minimal]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
